--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,10 @@
 # ASP.NET
+- task: AzureWebApp@1
+  inputs:
+    appType: 'webApp'
+    appName: 'TBCDevOpsDemo'
+    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    deploymentMethod: 'auto'
 # Build and test ASP.NET projects.
 # Add steps that publish symbols, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/apps/aspnet/build-aspnet-4
